docs-archive/apache-airflow-providers-amazon/9.19.0/_sources/_api/airflow/providers/amazon/aws/hooks/ssm/index.rst.txt
airflow.providers.amazon.aws.hooks.ssm
======================================

.. py:module:: airflow.providers.amazon.aws.hooks.ssm


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.hooks.ssm.SsmHook


Module Contents
---------------

.. py:class:: SsmHook(*args, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`


   Interact with Amazon Systems Manager (SSM).

   Provide thin wrapper around
   :external+boto3:py:class:`boto3.client("ssm") <SSM.Client>`.

   Additional arguments (such as ``aws_conn_id``) may be specified and
   are passed down to the underlying AwsBaseHook.

   .. seealso::
       - :class:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`


   .. py:method:: get_parameter_value(parameter, default = NOTSET)

      Return the provided Parameter or an optional default.

      If it is encrypted, then decrypt and mask.

      .. seealso::
          - :external+boto3:py:meth:`SSM.Client.get_parameter`

      :param parameter: The SSM Parameter name to return the value for.
      :param default: Optional default value to return if none is found.



   .. py:method:: get_command_invocation(command_id, instance_id)

      Get the output of a command invocation for a specific instance.

      .. seealso::
          - :external+boto3:py:meth:`SSM.Client.get_command_invocation`

      :param command_id: The ID of the command.
      :param instance_id: The ID of the instance.
      :return: The command invocation details including output.



   .. py:method:: list_command_invocations(command_id)

      List all command invocations for a given command ID.

      .. seealso::
          - :external+boto3:py:meth:`SSM.Client.list_command_invocations`

      :param command_id: The ID of the command.
      :return: Response from SSM list_command_invocations API.



